Refactor code by adding private constructors to utility classes